--- a/SoundCloud/SoundCloud/CommonView/ImageButton/ImageButton.xib
+++ b/SoundCloud/SoundCloud/CommonView/ImageButton/ImageButton.xib
@@ -12,9 +12,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomTabbarItem" customModule="SoundCloud" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImageButton" customModule="SoundCloud" customModuleProvider="target">
             <connections>
-                <outlet property="imvTabbarIcon" destination="haD-fE-kIw" id="IRf-Fj-5vT"/>
+                <outlet property="constraintMultiplerOfImage" destination="gXM-am-Xng" id="JwC-9T-A6X"/>
+                <outlet property="imvIcon" destination="haD-fE-kIw" id="IRf-Fj-5vT"/>
                 <outlet property="viewHighlight" destination="Z2M-8i-V7U" id="XUe-JP-StV"/>
             </connections>
         </placeholder>
@@ -39,11 +40,11 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jif-7s-sok">
                     <rect key="frame" x="5" y="5" width="226" height="136"/>
                     <connections>
-                        <action selector="TabbarItemClicked:" destination="-1" eventType="touchUpInside" id="CFD-2S-wJb"/>
+                        <action selector="imageButtonClicked:" destination="-1" eventType="touchUpInside" id="CFD-2S-wJb"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="jif-7s-sok" firstAttribute="top" secondItem="kcU-V4-bqu" secondAttribute="top" constant="5" id="10f-aN-7pg"/>
                 <constraint firstItem="kcU-V4-bqu" firstAttribute="trailing" secondItem="Z2M-8i-V7U" secondAttribute="trailing" id="44S-k5-4ey"/>
