--- a/SoundCloud/SoundCloud/Base.lproj/Main.storyboard
+++ b/SoundCloud/SoundCloud/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="d1M-EP-mEx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="u1M-N8-ftL">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -198,7 +198,7 @@
                                 <rect key="frame" x="0.0" y="80" width="375" height="587"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2U-Zy-jrG">
-                                        <rect key="frame" x="96" y="10" width="182" height="36"/>
+                                        <rect key="frame" x="93.5" y="10" width="187.5" height="36"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon_Add_Playlist" translatesAutoresizingMaskIntoConstraints="NO" id="ksw-0n-Hk2">
                                                 <rect key="frame" x="10" y="6" width="24" height="24"/>
@@ -208,8 +208,8 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add New Playlist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vV0-Bp-2eK">
-                                                <rect key="frame" x="44" y="7.5" width="128" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="44" y="7" width="133.5" height="22.5"/>
+                                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -275,6 +275,49 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eqH-Ag-dKh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2413.5999999999999" y="115.59220389805098"/>
+        </scene>
+        <!--List Song View Controller-->
+        <scene sceneID="ojd-Xf-PE3">
+            <objects>
+                <viewController id="Sbv-FK-nlr" customClass="ListSongViewController" customModule="SoundCloud" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YsY-dp-s4b">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="omB-7g-gFG" customClass="TitleView" customModule="SoundCloud" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="62"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mvh-RK-Stf">
+                                <rect key="frame" x="0.0" y="82" width="375" height="585"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Sbv-FK-nlr" id="28R-Db-baP"/>
+                                    <outlet property="delegate" destination="Sbv-FK-nlr" id="b9Z-hN-klM"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="omB-7g-gFG" firstAttribute="top" secondItem="zcx-xo-Nyt" secondAttribute="top" id="8EO-ZF-efl"/>
+                            <constraint firstItem="omB-7g-gFG" firstAttribute="height" secondItem="YsY-dp-s4b" secondAttribute="height" multiplier="60/647" id="A4d-Uz-YTy"/>
+                            <constraint firstItem="zcx-xo-Nyt" firstAttribute="trailing" secondItem="omB-7g-gFG" secondAttribute="trailing" id="TZD-wr-8EI"/>
+                            <constraint firstItem="mvh-RK-Stf" firstAttribute="leading" secondItem="zcx-xo-Nyt" secondAttribute="leading" id="elA-A9-9hz"/>
+                            <constraint firstItem="omB-7g-gFG" firstAttribute="leading" secondItem="zcx-xo-Nyt" secondAttribute="leading" id="ohX-b1-8Lz"/>
+                            <constraint firstItem="zcx-xo-Nyt" firstAttribute="trailing" secondItem="mvh-RK-Stf" secondAttribute="trailing" id="sHz-JK-SYf"/>
+                            <constraint firstItem="zcx-xo-Nyt" firstAttribute="bottom" secondItem="mvh-RK-Stf" secondAttribute="bottom" id="sU1-4m-0Sl"/>
+                            <constraint firstItem="mvh-RK-Stf" firstAttribute="top" secondItem="omB-7g-gFG" secondAttribute="bottom" id="wwi-jT-gei"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="zcx-xo-Nyt"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="mvh-RK-Stf" id="phX-KX-g8i"/>
+                        <outlet property="titleView" destination="omB-7g-gFG" id="cM2-m5-VRZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vo3-jH-ktP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3182" y="116"/>
         </scene>
     </scenes>
     <resources>
